# borsa-takip

./: .flake8  .gitignore  .pre-commit-config.yaml  ANNEM_PROFIL_DUZELTME.md  BASLATMA_KILAVUZU.md  BENEFITS.md  BERGUZAR_PEMBE_TEMA_FINAL.md  BERGUZAR_PEMBE_TEMA_ONCE_SONRA.md  BERGUZAR_PEMBE_TEMA_REHBER.md  BERGUZAR_PEMBE_TEMA_TAMAMLANDI.md  BERGUZAR_PEMBE_TEMA_TEKNIK.md  BERGUZAR_PEMBE_TEMA_TEST.md  BERGUZAR_TAC_GUNCELLEME.md  CONTRIBUTING.md  DEGISIKLIK_OZETI.md  DEGISIKLIK_RAPORU.md  GUNLUK_KZ_GUNCELLEME.md  GUNLUK_RESET_DOKUMANTASYON.md  GUNLUK_RESET_OZET.md  HIZLI_BASLANGIÇ.md  HIZLI_KULLANIM.md  IMPROVEMENTS.md  KURULUM_TAMAMLANDI.md  Makefile  PERFORMANCE_FIX_README.md  PORTFOY_GERCEK_DURUM.md  PROFILE_SISTEMI_KILAVUZU.md  PROFILE_SYSTEM_SUMMARY.md  PROFIL_FIX_README.md  PROFIL_SISTEM_OZET.md  PROFIL_SORUNU_COZUM.md  PROFIL_SORUN_COZUM_HIZLI.txt  QUOTA_FIX_SUMMARY.md  README.md  README_BINANCE_FUTURES.md  REFACTORING_SUMMARY.md  TAMAMLANDI.md  analyze_correct.py  analyze_sheet.py  analyze_sheet_full.py  (+35 more)
tests/: __init__.py  test_config.py  test_validators.py
